samples/_failures_safe/1761088725_209ae5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e71632c.c: In function ‘main’:
./samples/SAFE/__tmp_2e71632c.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_2e71632c.c:166:5: error: expected declaration or statement at end of input
